# gitwatcher

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
resources/: GitWatcher.manifest  GitWatcher.rc  Version.h.in
src/: DiffEngine.cpp  DiffEngine.h  FileWatcher.cpp  FileWatcher.h  GitRepository.cpp  GitRepository.h  main.cpp
testdata/: a.txt  b.txt
tests/: DiffEngineTests.cpp
